IBX-10479: Fixed collapse header text clipping

--- a/src/bundle/Resources/public/scss/_collapse.scss
+++ b/src/bundle/Resources/public/scss/_collapse.scss
@@ -59,6 +59,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            line-height: calculateRem(21px);
         }
     }
 
